Implement bulk api and remove dedicated modules